<resources>
    <string name="app_name">NMedia</string>
    <string name="nmedia">NMedia!</string>
    <string name="avatar_description">Author avatar</string>
    <string name="countOfLikes" translatable="false" >0</string>
    <string name="countOfShare" translatable="false" >0</string>
    <string name="countOfViews" translatable="false" >0</string>
    <string name="remove">Remove</string>
    <string name="edit">Edit</string>
    <string name="post_text">Post text</string>
    <string name="post_save">Post save</string>
    <string name="cancel">Cancel</string>
    <string name="edit_message">Edit Message</string>
    <string name="like">Like</string>
    <string name="share_post">Share Post</string>
    <string name="visibility">Visibility</string>
    <string name="add_post">Add Post</string>
    <string name="url">input url</string>
    <string name="text">input text</string>
    <string name="notification_user_liked">User %1$s liked %2$s\'s post</string>
    <string name="notification_new_post">Author %1$s published new post:</string>
    <string name="channel_remote_name">Server notifications</string>
    <string name="channel_remote_description">Notifications from remote server</string>
</resources>